--- a/lib/java/com/google/android/material/datepicker/res/values/strings.xml
+++ b/lib/java/com/google/android/material/datepicker/res/values/strings.xml
@@ -55,5 +55,5 @@
   <string name="mtrl_picker_today_description" description="a11y string that informs the user that the focused day is today [CHAR_LIMIT=NONE]">Today %1$s</string>
   <string name="mtrl_picker_start_date_description" description="a11y string that informs the user that the focused day is the start of a range [CHAR_LIMIT=NONE]">Start date %1$s</string>
   <string name="mtrl_picker_end_date_description" description="a11y string that informs the user that the focused day is the end of a range [CHAR_LIMIT=NONE]">End date %1$s</string>
-
+  <string name="mtrl_picker_clear" description="Button text to indicate that the widget will clear user's selection [CHAR_LIMIT=16]">Clear</string>
 </resources>
